bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:2: error: value =< is not a member of Int
  return(hour=<7 || hour>20)
             ^